# pupil-metrics

./: .gitignore  README.md  pyproject.toml  setup.py
src/pupil_metrics/: pupil_analysis.ipynb  pupil_metrics.py
