[project]
name = "pupil-metrics"
version = "0.0.1"
authors = [
  { name="Will Das", email="williamhdas@gmail.com" },
]
description = "A small package for computing pupil-size metrics over a time-series."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wdas03/pupil-metrics"
"Bug Tracker" = "https://github.com/wdas03/pupil-metrics/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"